# iapytoo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
ddp/: Dockerfile-broadcast  Dockerfile-metrics  broadcast.py  config.yml  launch.sh  launch_ssh.sh  metrics.py
dockers/: Dockerfile  Readme.md  docker-compose.yml  requirements.txt  run-python.sh
docs/source/: conf.py  index.md  index.rst  mnist_example.md
examples/: config_ddpm.yml  config_infer.yml  config_mnist.json  config_mnist.yml  config_wgan.json  config_wgan.yml  create_sindata.py  ddpm_infer.py  ddpm_train.py  mlflow_infer.py  mnist.py  mnist_find_lr.py  mnist_infer.py  mnist_train.py  run_examples.py  wgan_infer.py  wgan_mlflow_infer.py  wgan_mnist.py  wgan_train.py
examples/examples/: subclasses.py
examples/mlserver/: ReadMe.md  array.npy  debug_mlserver.py  requirements.txt  test_infer.py  test_infer_codec.py  test_infer_grpc.py  utils.py
examples/wgan/: config_wgan.yml  critic.py  dataset.py  generator.py  mlflow_infer.py  train.py
iapytoo/: _version.py
iapytoo/dataset/: __init__.py  normalize.py  scaling.py  transform.py
iapytoo/metrics/: __init__.py  collection.py  creators.py  distrib.py  metric.py  predefined.py
iapytoo/mlflow/: codec.py  model.py
iapytoo/predictions/: __init__.py  feature.py  plotters.py  predictors.py  types.py
iapytoo/train/: __init__.py  checkpoint.py  context.py  ddpm.py  factories.py  feature.py  hooks.py  inference.py  logger.py  loss.py  metric_distrib.py  metrics_collection.py  mlflow_model.py  model.py  models.py  nn_loss.py  optimizer.py  predictions.py  scheduler.py  training.py  valuator.py  wgan.py
iapytoo/utils/: arguments.py  config.py  (+7 more)
mlflow/: relocate_mlruns.py  zip_selected_runs.py
tests/: test_config.py  test_dataset.py  test_factories.py  test_loss.py  test_metrics.py  test_model.py  test_normalize.py  test_scaling.py
(+43 files in other folders)
