[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "iapytoo"
version = "0.0.2"

authors = [
  { name="Jean-François Lecomte", email="zwergon@free.fr" },
]

description = "Un toolkit pour vite coder un modèle pytorch d'ia utilisant mlflow"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["iapytoo", 
"iapytoo.dataset",
"iapytoo.metrics", 
"iapytoo.utils", 
"iapytoo.predictions", 
"iapytoo.train"]